src/objects/FinancialRequirement__c.object
<CustomObject>
    <description>Details about each requirement for a specific fund associated to the Financial Application.</description>
    <fields>
        <fullName>AidYear__c</fullName>
        <description>Aid year for the scholarship/fund applied for.</description>
        <label>Aid Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerRowID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Banner Rowid used for the primary key in the informatica load</description>
        <externalId>true</externalId>
        <inlineHelpText>The Banner Rowid used for the primary key in the informatica load</inlineHelpText>
        <label>Banner RowID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>KeyValueFinancialRequirementLookup__r.Value__c</description>
        <formula>Requirement__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstablishedDate__c</fullName>
        <description>The Date the requirement was initially established</description>
        <inlineHelpText>The Date the requirement was initially established</inlineHelpText>
        <label>Established Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAAidYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Financial Aid Year that the requirement belongs to</description>
        <inlineHelpText>The Financial Aid Year that the requirement belongs to</inlineHelpText>
        <label>FA Aid Year</label>
        <referenceTo>Year__c</referenceTo>
        <relationshipLabel>Financial Requirements</relationshipLabel>
        <relationshipName>FinancialRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialApplication__c</fullName>
        <description>Master-detail relationship linking Financial Requirements to Financial Application. Financial Application being the parent.</description>
        <label>Financial Application</label>
        <referenceTo>FinancialApplication__c</referenceTo>
        <relationshipLabel>Financial Requirements</relationshipLabel>
        <relationshipName>FinancialRequirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions for satisfying this requirement</description>
        <inlineHelpText>Instructions for satisfying this requirement</inlineHelpText>
        <label>Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreventsDisbursement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the Requirement Prevents funds from being disbursed</description>
        <inlineHelpText>Whether or not the Requirement Prevents funds from being disbursed</inlineHelpText>
        <label>Prevents Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventsPackaging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the requirement prevents packaging</description>
        <inlineHelpText>Whether or not the requirement prevents packaging</inlineHelpText>
        <label>Prevents Packaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequirementDescription__c</fullName>
        <description>Description of the scholarship/fund requirement.</description>
        <label>Requirement Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementFund__c</fullName>
        <description>If the requirement only applies to certain fund, such as scholarship terms and conditions</description>
        <inlineHelpText>If the requirement only applies to certain fund, such as scholarship terms and conditions</inlineHelpText>
        <label>Requirement Fund</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementType__c</fullName>
        <description>The sub-category of a financial aid requirement</description>
        <inlineHelpText>The sub-category of a financial aid requirement</inlineHelpText>
        <label>Requirement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Header Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RequirementURL__c</fullName>
        <description>Application Requirements URL linking it to Academic Works.</description>
        <label>Requirement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Value Financial Requirement Lookup</description>
        <label>Requirement</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>Financial Requirements</relationshipLabel>
        <relationshipName>FinancialRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequirementsStatus__c</fullName>
        <description>The status of the requirement for the financial application ie, Not Received; Received, Not Satisfied; Satisfied.</description>
        <label>Requirements Status</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending-Question to school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received, Not Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received and Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received but Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Not Yet Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SatisfiedIndicator__c</fullName>
        <description>Whether or not the status of the requirement warrant it to be satisfied</description>
        <formula>If(    or( ISPICKVAL(RequirementsStatus__c , &apos;Cancelled&apos;), 
        or( ISPICKVAL(RequirementsStatus__c , &apos;Received and Satisfied&apos;), 
        or( ISPICKVAL(RequirementsStatus__c , &apos;Satisfied&apos;), 
             ISPICKVAL( RequirementsStatus__c,&apos;Waived&apos;) ))),  &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Satisfied Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <description>The Status Code of the requirement</description>
        <inlineHelpText>The Status Code of the requirement</inlineHelpText>
        <label>Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <description>The date the status was last updated in Banner</description>
        <inlineHelpText>The date the status was last updated in Banner</inlineHelpText>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TempID__c</fullName>
        <description>Temporary ID for import</description>
        <inlineHelpText>Temporary ID for import</inlineHelpText>
        <label>Temp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <description>The Term Code if the requirement is specific to a term code</description>
        <inlineHelpText>The Term Code if the requirement is specific to a term code</inlineHelpText>
        <label>Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Financial Requirement</label>
    <nameField>
        <label>Financial Requirements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Requirements</pluralLabel>
    <recordTypes>
        <fullName>FinancialAid</fullName>
        <active>true</active>
        <description>Record Type for use in Financial Aid</description>
        <label>Financial Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scholarship</fullName>
        <active>true</active>
        <description>Requirement of scholarship application.</description>
        <label>Scholarship</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThirdParty</fullName>
        <active>true</active>
        <description>Third Party Requirement</description>
        <label>Third Party</label>
    </recordTypes>
    <recordTypes>
        <fullName>VA</fullName>
        <active>true</active>
        <description>Requirement of VA.</description>
        <label>VA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>